syntax = "proto3";

package database;

option go_package = "github.com/YouSangSon/database-service/proto/pb";

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// DatabaseService는 데이터베이스 CRUD 작업을 제공하는 gRPC 서비스입니다
service DatabaseService {
  // Create는 새로운 문서를 생성합니다
  rpc Create(CreateRequest) returns (CreateResponse);

  // Read는 ID로 문서를 조회합니다
  rpc Read(ReadRequest) returns (ReadResponse);

  // Update는 기존 문서를 업데이트합니다
  rpc Update(UpdateRequest) returns (UpdateResponse);

  // Delete는 문서를 삭제합니다
  rpc Delete(DeleteRequest) returns (DeleteResponse);

  // List는 문서 목록을 조회합니다
  rpc List(ListRequest) returns (ListResponse);

  // HealthCheck는 서비스 상태를 확인합니다
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

// CreateRequest는 문서 생성 요청입니다
message CreateRequest {
  string collection = 1;
  google.protobuf.Struct data = 2;
}

// CreateResponse는 문서 생성 응답입니다
message CreateResponse {
  string id = 1;
  google.protobuf.Timestamp created = 2;
}

// ReadRequest는 문서 조회 요청입니다
message ReadRequest {
  string collection = 1;
  string id = 2;
}

// ReadResponse는 문서 조회 응답입니다
message ReadResponse {
  string id = 1;
  google.protobuf.Struct data = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// UpdateRequest는 문서 업데이트 요청입니다
message UpdateRequest {
  string collection = 1;
  string id = 2;
  google.protobuf.Struct data = 3;
}

// UpdateResponse는 문서 업데이트 응답입니다
message UpdateResponse {
  bool success = 1;
  string message = 2;
}

// DeleteRequest는 문서 삭제 요청입니다
message DeleteRequest {
  string collection = 1;
  string id = 2;
}

// DeleteResponse는 문서 삭제 응답입니다
message DeleteResponse {
  bool success = 1;
  string message = 2;
}

// ListRequest는 문서 목록 조회 요청입니다
message ListRequest {
  string collection = 1;
  google.protobuf.Struct filter = 2;
  int32 limit = 3;
  int32 skip = 4;
}

// ListResponse는 문서 목록 조회 응답입니다
message ListResponse {
  repeated Document documents = 1;
  int32 total = 2;
}

// Document는 문서 모델입니다
message Document {
  string id = 1;
  google.protobuf.Struct data = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

// HealthCheckRequest는 헬스체크 요청입니다
message HealthCheckRequest {}

// HealthCheckResponse는 헬스체크 응답입니다
message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
}
